--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend",
-  "proxy": "http://127.0.0.1:3002",
+  "proxy": "https://loginregisterapp-api.onrender.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
